--- a/create.html
+++ b/create.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Apr 30 2021 04:34:27 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Apr 30 2021 08:04:37 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f6dd11de72a337ecd56808c" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -317,12 +317,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <div class="text-block-38">Editors can approve articles for publication right from the editor, marking them as having passed your quality control checks. Only articles marked for publication will be published on their scheduled day.<br></div>
         </div>
         <div class="editor-editors-walkthrough-text-parent-copy _4">
-          <div class="feature-photo-crop editor-permissions"><img src="images/Editor-Missing-Alt-Text.png" loading="lazy" width="435" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, 100vw" srcset="images/Editor-Missing-Alt-Text-p-500.png 500w, images/Editor-Missing-Alt-Text-p-800.png 800w, images/Editor-Missing-Alt-Text.png 948w" alt="Jraft&#x27;s editor showing a visual indicator for missing alt text" class="header-mobile-photo _8"></div>
+          <div class="feature-photo-crop editor-permissions"><img src="images/Editor-Missing-Alt-Text.png" loading="lazy" width="435" sizes="(max-width: 479px) 86vw, (max-width: 767px) 90vw, 100vw" srcset="images/Editor-Missing-Alt-Text-p-500.png 500w, images/Editor-Missing-Alt-Text-p-800.png 800w, images/Editor-Missing-Alt-Text.png 948w" alt="Jraft&#x27;s editor showing a visual indicator for missing alt text" class="header-mobile-photo _8"></div>
           <h3 class="heading-7 editor">Missing alt-text indicators</h3>
           <div class="text-block-38">For SEO best practice, alt-text needs to be applied to images. Albion visually shows you which images don&#x27;t have alt text so you never forget to add alt-text to images again.<span class="emphasise"></span></div>
         </div>
       </div>
-      <div class="div-block-1386 editor-features"><img src="images/Editor-Missing-Alt-Text.png" loading="lazy" width="474" sizes="(max-width: 767px) 100vw, 56vw" srcset="images/Editor-Missing-Alt-Text-p-500.png 500w, images/Editor-Missing-Alt-Text-p-800.png 800w, images/Editor-Missing-Alt-Text.png 948w" alt="Jraft&#x27;s editor showing a visual indicator for missing alt text" class="editor-editors-photos _3"><img src="images/Meta-Controls.png" loading="lazy" width="504" sizes="(max-width: 767px) 100vw, 56vw" srcset="images/Meta-Controls-p-500.png 500w, images/Meta-Controls-p-800.png 800w, images/Meta-Controls.png 1008w" alt="Jraft&#x27;s article management functionality in the editor" class="editor-editors-photos _2"><img src="images/1-Comments.png" loading="lazy" width="603" sizes="(max-width: 767px) 100vw, (max-width: 991px) 47vw, 46vw" srcset="images/1-Comments-p-500.png 500w, images/1-Comments-p-800.png 800w, images/1-Comments-p-1080.png 1080w, images/1-Comments.png 1206w" alt="Leaving editor comments in the editor for draft articles" class="editor-editors-photos _1">
+      <div class="div-block-1386 editor-features"><img src="images/Editor-Missing-Alt-Text.png" loading="lazy" width="474" sizes="(max-width: 767px) 100vw, 56vw" srcset="images/Editor-Missing-Alt-Text-p-500.png 500w, images/Editor-Missing-Alt-Text-p-800.png 800w, images/Editor-Missing-Alt-Text.png 948w" alt="Jraft&#x27;s editor showing a visual indicator for missing alt text" class="editor-editors-photos _3"><img src="images/Meta-Controls.png" loading="lazy" width="504" sizes="(max-width: 767px) 100vw, (max-width: 991px) 47vw, 46vw" srcset="images/Meta-Controls-p-500.png 500w, images/Meta-Controls-p-800.png 800w, images/Meta-Controls.png 1008w" alt="Jraft&#x27;s article management functionality in the editor" class="editor-editors-photos _2"><img src="images/1-Comments.png" loading="lazy" width="603" sizes="(max-width: 767px) 100vw, (max-width: 991px) 47vw, 46vw" srcset="images/1-Comments-p-500.png 500w, images/1-Comments-p-800.png 800w, images/1-Comments-p-1080.png 1080w, images/1-Comments.png 1206w" alt="Leaving editor comments in the editor for draft articles" class="editor-editors-photos _1">
         <div class="photo-bg-colour editor-2"></div>
       </div>
     </div>
@@ -370,61 +370,65 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
     </div>
   </div>
-  <div class="feature-compare">
-    <div class="div-block-29">
-      <h3 class="heading-copy">Compare Storipress with</h3>
-    </div>
-    <div class="div-block-13">
-      <a href="vs/wordpress" class="compare-with-div-link-2 w-inline-block">
-        <div class="comparison-header-parent">
-          <div><img src="images/word-press-logo.svg" loading="lazy" alt=""></div>
-          <div><img src="images/path.svg" loading="lazy" alt=""></div>
-        </div>
-        <h4 class="heading">WordPress</h4>
-        <div class="text-block-5">Open-source, but needs extensive customisation, plugins, custom development work, and ongoing maintenance.</div>
-      </a>
-      <div class="div-block-30"></div>
-      <a href="vs/wix" class="compare-with-div-link-2 w-inline-block">
-        <div class="comparison-header-parent">
-          <div><img src="images/wix-logo.svg" loading="lazy" alt=""></div>
-          <div><img src="images/path.svg" loading="lazy" alt=""></div>
-        </div>
-        <h4 class="heading">Wix</h4>
-        <div class="text-block-5">It’s a professional publishing platform with a robust CMS and workflow features facing up against a drag-and-drop tool — is there even a contest?</div>
-      </a>
+  <div class="feature-section">
+    <div class="feature-compare">
+      <div class="div-block-29">
+        <h3 class="heading-copy">Compare Storipress with</h3>
+      </div>
+      <div class="div-block-13">
+        <a href="vs/wordpress" class="compare-with-div-link-2 w-inline-block">
+          <div class="comparison-header-parent">
+            <div><img src="images/word-press-logo.svg" loading="lazy" alt=""></div>
+            <div><img src="images/path.svg" loading="lazy" alt=""></div>
+          </div>
+          <h4 class="heading">WordPress</h4>
+          <div class="text-block-5">Open-source, but needs extensive customisation, plugins, custom development work, and ongoing maintenance.</div>
+        </a>
+        <div class="div-block-30"></div>
+        <a href="vs/wix" class="compare-with-div-link-2 w-inline-block">
+          <div class="comparison-header-parent">
+            <div><img src="images/wix-logo.svg" loading="lazy" alt=""></div>
+            <div><img src="images/path.svg" loading="lazy" alt=""></div>
+          </div>
+          <h4 class="heading">Wix</h4>
+          <div class="text-block-5">It’s a professional publishing platform with a robust CMS and workflow features facing up against a drag-and-drop tool — is there even a contest?</div>
+        </a>
+      </div>
     </div>
   </div>
-  <div class="feature-bounding-box other-features-1">
-    <h2 class="heading-10">All features</h2>
-    <div class="div-block-1397">
-      <a href="manage" class="other-features-parent w-inline-block">
-        <div class="other-image-parent"><img src="images/Workflow.svg" loading="lazy" alt=""></div>
-        <div class="div-block-1400">
-          <h4 class="heading-11">Workflow</h4>
-          <div class="text-block-45">Ditch the spreadsheet and manage your writing team efficiently.</div>
-        </div>
-      </a>
-      <a href="build" class="other-features-parent w-inline-block">
-        <div class="other-image-parent"><img src="images/design.svg" loading="lazy" alt=""></div>
-        <div class="div-block-1400">
-          <h4 class="heading-11">Build</h4>
-          <div class="text-block-45">Design and build a performant, well designed publication, quickly.</div>
-        </div>
-      </a>
-      <a href="engage" class="other-features-parent w-inline-block">
-        <div class="other-image-parent"><img src="images/Eye.svg" loading="lazy" alt=""></div>
-        <div class="div-block-1400">
-          <h4 class="heading-11">Engagement</h4>
-          <div class="text-block-45">Maximise your readership, monetise your audience.</div>
-        </div>
-      </a>
-      <a href="hosting" class="other-features-parent w-inline-block">
-        <div class="other-image-parent"><img src="images/Cloud.svg" loading="lazy" alt=""></div>
-        <div class="div-block-1400">
-          <h4 class="heading-11">Hosting</h4>
-          <div class="text-block-45">The fastest hosting you&#x27;ll find on the internet.</div>
-        </div>
-      </a>
+  <div class="feature-section">
+    <div class="feature-bounding-box other-features-1">
+      <h2 class="heading-10">All features</h2>
+      <div class="div-block-1397">
+        <a href="manage" class="other-features-parent w-inline-block">
+          <div class="other-image-parent"><img src="images/Workflow.svg" loading="lazy" alt=""></div>
+          <div class="div-block-1400">
+            <h4 class="heading-11">Workflow</h4>
+            <div class="text-block-45">Ditch the spreadsheet and manage your writing team efficiently.</div>
+          </div>
+        </a>
+        <a href="build" class="other-features-parent w-inline-block">
+          <div class="other-image-parent"><img src="images/design.svg" loading="lazy" alt=""></div>
+          <div class="div-block-1400">
+            <h4 class="heading-11">Build</h4>
+            <div class="text-block-45">Design and build a performant, well designed publication, quickly.</div>
+          </div>
+        </a>
+        <a href="engage" class="other-features-parent w-inline-block">
+          <div class="other-image-parent"><img src="images/Eye.svg" loading="lazy" alt=""></div>
+          <div class="div-block-1400">
+            <h4 class="heading-11">Engagement</h4>
+            <div class="text-block-45">Maximise your readership, monetise your audience.</div>
+          </div>
+        </a>
+        <a href="hosting" class="other-features-parent w-inline-block">
+          <div class="other-image-parent"><img src="images/Cloud.svg" loading="lazy" alt=""></div>
+          <div class="div-block-1400">
+            <h4 class="heading-11">Hosting</h4>
+            <div class="text-block-45">The fastest hosting you&#x27;ll find on the internet.</div>
+          </div>
+        </a>
+      </div>
     </div>
   </div>
   <div id="Footer-CTA" class="pre-footer">
@@ -432,7 +436,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div data-w-id="afb90ad6-a3c3-b461-2a02-e9feb26a533f" class="hosting-pricing-parent">
         <div>
           <h2 class="heading-12">Half the price of a WordPress plugin</h2>
-          <div class="cta-pricing-description">Build your publication for free (no trial period, no credit card). Just add a plan for a custom domain when you&#x27;re ready.</div>
         </div>
         <a href="pricing" class="button square-corners left-align w-button">View Pricing</a>
         <link rel="prefetch" href="/pricing">
@@ -453,6 +456,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
     </div>
   </div>
+  <div class="footer-reveal-spacer"></div>
   <footer class="footer-section footer">
     <div class="footer-flex-container">
       <div class="div-block-1402">
@@ -488,6 +492,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               </li>
               <li>
                 <a href="pricing" class="footer-text">Pricing</a>
+              </li>
+              <li>
+                <a href="https://www.notion.so/storipress/Storipress-Changelog-24f0b5a2c6ff4c99a20e5af72ddfbb4e" target="_blank" class="footer-text">Changelog</a>
               </li>
             </ul>
           </div>
