--- a/manage.html
+++ b/manage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Apr 30 2021 04:34:27 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Apr 30 2021 08:04:37 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f6dd0efd274a405eb701b00" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -297,61 +297,65 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
     </div>
   </div>
-  <div class="feature-compare">
-    <div class="div-block-29">
-      <h3 class="heading-copy">Compare Storipress with</h3>
-    </div>
-    <div class="div-block-13">
-      <a href="vs/wordpress" class="compare-with-div-link-2 w-inline-block">
-        <div class="comparison-header-parent">
-          <div><img src="images/word-press-logo.svg" loading="lazy" alt=""></div>
-          <div><img src="images/path.svg" loading="lazy" alt=""></div>
-        </div>
-        <h4 class="heading">WordPress</h4>
-        <div class="text-block-5">Open-source, but needs extensive customisation, plugins, custom development work, and ongoing maintenance.</div>
-      </a>
-      <div class="div-block-30"></div>
-      <a href="vs/wix" class="compare-with-div-link-2 w-inline-block">
-        <div class="comparison-header-parent">
-          <div><img src="images/wix-logo.svg" loading="lazy" alt=""></div>
-          <div><img src="images/path.svg" loading="lazy" alt=""></div>
-        </div>
-        <h4 class="heading">Wix</h4>
-        <div class="text-block-5">It’s a professional publishing platform with a robust CMS and workflow features facing up against a drag-and-drop tool — is there even a contest?</div>
-      </a>
+  <div class="feature-section">
+    <div class="feature-compare">
+      <div class="div-block-29">
+        <h3 class="heading-copy">Compare Storipress with</h3>
+      </div>
+      <div class="div-block-13">
+        <a href="vs/wordpress" class="compare-with-div-link-2 w-inline-block">
+          <div class="comparison-header-parent">
+            <div><img src="images/word-press-logo.svg" loading="lazy" alt=""></div>
+            <div><img src="images/path.svg" loading="lazy" alt=""></div>
+          </div>
+          <h4 class="heading">WordPress</h4>
+          <div class="text-block-5">Open-source, but needs extensive customisation, plugins, custom development work, and ongoing maintenance.</div>
+        </a>
+        <div class="div-block-30"></div>
+        <a href="vs/wix" class="compare-with-div-link-2 w-inline-block">
+          <div class="comparison-header-parent">
+            <div><img src="images/wix-logo.svg" loading="lazy" alt=""></div>
+            <div><img src="images/path.svg" loading="lazy" alt=""></div>
+          </div>
+          <h4 class="heading">Wix</h4>
+          <div class="text-block-5">It’s a professional publishing platform with a robust CMS and workflow features facing up against a drag-and-drop tool — is there even a contest?</div>
+        </a>
+      </div>
     </div>
   </div>
-  <div class="feature-bounding-box other-features-1">
-    <h2 class="heading-10">All features</h2>
-    <div class="div-block-1397">
-      <a href="build" class="other-features-parent w-inline-block">
-        <div class="other-image-parent"><img src="images/design.svg" loading="lazy" alt=""></div>
-        <div class="div-block-1400">
-          <h4 class="heading-11">Build</h4>
-          <div class="text-block-45">Design and build a performant, well designed publication, quickly.</div>
-        </div>
-      </a>
-      <a href="create" class="other-features-parent w-inline-block">
-        <div class="other-image-parent"><img src="images/Edit.svg" loading="lazy" alt=""></div>
-        <div class="div-block-1400">
-          <h4 class="heading-11">Write</h4>
-          <div class="text-block-45">Write articles collaboratively and visually.</div>
-        </div>
-      </a>
-      <a href="engage" class="other-features-parent w-inline-block">
-        <div class="other-image-parent"><img src="images/Eye.svg" loading="lazy" alt=""></div>
-        <div class="div-block-1400">
-          <h4 class="heading-11">Engagement</h4>
-          <div class="text-block-45">Maximise your readership, monetise your audience.</div>
-        </div>
-      </a>
-      <a href="hosting" class="other-features-parent w-inline-block">
-        <div class="other-image-parent"><img src="images/Cloud.svg" loading="lazy" alt=""></div>
-        <div class="div-block-1400">
-          <h4 class="heading-11">Hosting</h4>
-          <div class="text-block-45">The fastest hosting you&#x27;ll find on the internet.</div>
-        </div>
-      </a>
+  <div class="feature-section">
+    <div class="feature-bounding-box other-features-1">
+      <h2 class="heading-10">All features</h2>
+      <div class="div-block-1397">
+        <a href="build" class="other-features-parent w-inline-block">
+          <div class="other-image-parent"><img src="images/design.svg" loading="lazy" alt=""></div>
+          <div class="div-block-1400">
+            <h4 class="heading-11">Build</h4>
+            <div class="text-block-45">Design and build a performant, well designed publication, quickly.</div>
+          </div>
+        </a>
+        <a href="create" class="other-features-parent w-inline-block">
+          <div class="other-image-parent"><img src="images/Edit.svg" loading="lazy" alt=""></div>
+          <div class="div-block-1400">
+            <h4 class="heading-11">Write</h4>
+            <div class="text-block-45">Write articles collaboratively and visually.</div>
+          </div>
+        </a>
+        <a href="engage" class="other-features-parent w-inline-block">
+          <div class="other-image-parent"><img src="images/Eye.svg" loading="lazy" alt=""></div>
+          <div class="div-block-1400">
+            <h4 class="heading-11">Engagement</h4>
+            <div class="text-block-45">Maximise your readership, monetise your audience.</div>
+          </div>
+        </a>
+        <a href="hosting" class="other-features-parent w-inline-block">
+          <div class="other-image-parent"><img src="images/Cloud.svg" loading="lazy" alt=""></div>
+          <div class="div-block-1400">
+            <h4 class="heading-11">Hosting</h4>
+            <div class="text-block-45">The fastest hosting you&#x27;ll find on the internet.</div>
+          </div>
+        </a>
+      </div>
     </div>
   </div>
   <div id="Footer-CTA" class="pre-footer">
@@ -359,7 +363,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div data-w-id="afb90ad6-a3c3-b461-2a02-e9feb26a533f" class="hosting-pricing-parent">
         <div>
           <h2 class="heading-12">Half the price of a WordPress plugin</h2>
-          <div class="cta-pricing-description">Build your publication for free (no trial period, no credit card). Just add a plan for a custom domain when you&#x27;re ready.</div>
         </div>
         <a href="pricing" class="button square-corners left-align w-button">View Pricing</a>
         <link rel="prefetch" href="/pricing">
@@ -380,6 +383,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
     </div>
   </div>
+  <div class="footer-reveal-spacer"></div>
   <footer class="footer-section footer">
     <div class="footer-flex-container">
       <div class="div-block-1402">
@@ -415,6 +419,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               </li>
               <li>
                 <a href="pricing" class="footer-text">Pricing</a>
+              </li>
+              <li>
+                <a href="https://www.notion.so/storipress/Storipress-Changelog-24f0b5a2c6ff4c99a20e5af72ddfbb4e" target="_blank" class="footer-text">Changelog</a>
               </li>
             </ul>
           </div>
