--- a/vs/medium.html
+++ b/vs/medium.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Apr 30 2021 04:34:27 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Apr 30 2021 08:04:37 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f7acec2435056b1a826505b" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -150,7 +150,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   </div>
   <div class="comparison-hero">
     <div class="div-block-1416">
-      <div class="image-wrapper"><img src="../images/Editor-Comp.png" loading="eager" width="1120" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 859.796875px, 87vw" srcset="../images/Editor-Comp-p-500.png 500w, ../images/Editor-Comp-p-800.png 800w, ../images/Editor-Comp-p-1080.png 1080w, ../images/Editor-Comp-p-1600.png 1600w, ../images/Editor-Comp-p-2000.png 2000w, ../images/Editor-Comp.png 2240w" alt="Jraft&#x27;s collaborative editor in action" class="image-58"></div>
+      <div class="image-wrapper"><img src="../images/Editor-Comp.png" loading="eager" width="1120" sizes="(max-width: 767px) 100vw, (max-width: 991px) 859.796875px, 87vw" srcset="../images/Editor-Comp-p-500.png 500w, ../images/Editor-Comp-p-800.png 800w, ../images/Editor-Comp-p-1080.png 1080w, ../images/Editor-Comp-p-1600.png 1600w, ../images/Editor-Comp-p-2000.png 2000w, ../images/Editor-Comp.png 2240w" alt="Jraft&#x27;s collaborative editor in action" class="image-58"></div>
       <div class="hero-other-wrapper">
         <div class="div-block-1428">
           <h1 class="heading-16">Storipress vs Medium</h1>
@@ -273,23 +273,25 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     </div>
     <div class="photo-bg-colour comparision-cta"></div>
   </div>
-  <div class="feature-bounding-box other-features-1">
-    <h2 class="heading-10">More comparisons</h2>
-    <div class="div-block-1397">
-      <a href="../vs/wordpress" class="other-features-parent comparisons w-inline-block">
-        <div class="other-image-parent comparison"><img src="../images/word-press-logo.svg" loading="lazy" alt="" class="image-66"></div>
-        <div class="div-block-1400">
-          <h4 class="heading-11 comparisons">WordPress</h4>
-          <div class="text-block-45">With powerful collaboration features, comparing Storipress and WordPress is like comparing Notepad and Google Docs.</div>
-        </div>
-      </a>
-      <a href="../vs/wix" class="other-features-parent comparisons w-inline-block">
-        <div class="other-image-parent comparison"><img src="../images/wix-logo.svg" loading="lazy" alt="" class="image-66"></div>
-        <div class="div-block-1400">
-          <h4 class="heading-11 comparisons">Wix</h4>
-          <div class="text-block-45">It&#x27;s a professional publishing platform with a robust CMS facing up against a drag-and-drop tool. Is there even a contest?</div>
-        </div>
-      </a>
+  <div class="feature-section">
+    <div class="feature-bounding-box other-features-1">
+      <h2 class="heading-10">More comparisons</h2>
+      <div class="div-block-1397">
+        <a href="../vs/wordpress" class="other-features-parent comparisons w-inline-block">
+          <div class="other-image-parent comparison"><img src="../images/word-press-logo.svg" loading="lazy" alt="" class="image-66"></div>
+          <div class="div-block-1400">
+            <h4 class="heading-11 comparisons">WordPress</h4>
+            <div class="text-block-45">With powerful collaboration features, comparing Storipress and WordPress is like comparing Notepad and Google Docs.</div>
+          </div>
+        </a>
+        <a href="../vs/wix" class="other-features-parent comparisons w-inline-block">
+          <div class="other-image-parent comparison"><img src="../images/wix-logo.svg" loading="lazy" alt="" class="image-66"></div>
+          <div class="div-block-1400">
+            <h4 class="heading-11 comparisons">Wix</h4>
+            <div class="text-block-45">It&#x27;s a professional publishing platform with a robust CMS facing up against a drag-and-drop tool. Is there even a contest?</div>
+          </div>
+        </a>
+      </div>
     </div>
   </div>
   <div href="#Footer-CTA" data-w-id="ff63298b-f0f3-2ccd-9bf0-c9b0f04e1b31" class="float-nav">
@@ -354,7 +356,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div data-w-id="afb90ad6-a3c3-b461-2a02-e9feb26a533f" class="hosting-pricing-parent">
         <div>
           <h2 class="heading-12">Half the price of a WordPress plugin</h2>
-          <div class="cta-pricing-description">Build your publication for free (no trial period, no credit card). Just add a plan for a custom domain when you&#x27;re ready.</div>
         </div>
         <a href="../pricing" class="button square-corners left-align w-button">View Pricing</a>
         <link rel="prefetch" href="/pricing">
@@ -375,6 +376,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
     </div>
   </div>
+  <div class="footer-reveal-spacer"></div>
   <footer class="footer-section footer">
     <div class="footer-flex-container">
       <div class="div-block-1402">
@@ -410,6 +412,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               </li>
               <li>
                 <a href="../pricing" class="footer-text">Pricing</a>
+              </li>
+              <li>
+                <a href="https://www.notion.so/storipress/Storipress-Changelog-24f0b5a2c6ff4c99a20e5af72ddfbb4e" target="_blank" class="footer-text">Changelog</a>
               </li>
             </ul>
           </div>
