--- a/legal/publisher-agreement.html
+++ b/legal/publisher-agreement.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Apr 30 2021 04:34:27 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Apr 30 2021 08:04:37 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6018fffca8d17f64651f2968" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -229,6 +229,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <p class="legal-paragraph-text">Albion Media Pty. Ltd.<br>8 Brewer Ave.,<br>Liberty Grove, NSW 2138<br>Australia</p>
     </div>
   </div>
+  <div class="footer-reveal-spacer"></div>
   <footer class="footer-section footer">
     <div class="footer-flex-container">
       <div class="div-block-1402">
@@ -264,6 +265,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               </li>
               <li>
                 <a href="../pricing" class="footer-text">Pricing</a>
+              </li>
+              <li>
+                <a href="https://www.notion.so/storipress/Storipress-Changelog-24f0b5a2c6ff4c99a20e5af72ddfbb4e" target="_blank" class="footer-text">Changelog</a>
               </li>
             </ul>
           </div>
