--- a/legal/terms.html
+++ b/legal/terms.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Apr 30 2021 04:34:27 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Apr 30 2021 08:04:37 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f86f18cbace9b00a3202046" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -313,6 +313,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <p class="legal-paragraph-text">No instance of waiver by Storipress of its rights or remedies under these terms and conditions shall imply any obligation to grant any similar, future, or other waiver.</p>
     </div>
   </div>
+  <div class="footer-reveal-spacer"></div>
   <footer class="footer-section footer">
     <div class="footer-flex-container">
       <div class="div-block-1402">
@@ -348,6 +349,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               </li>
               <li>
                 <a href="../pricing" class="footer-text">Pricing</a>
+              </li>
+              <li>
+                <a href="https://www.notion.so/storipress/Storipress-Changelog-24f0b5a2c6ff4c99a20e5af72ddfbb4e" target="_blank" class="footer-text">Changelog</a>
               </li>
             </ul>
           </div>
