--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Apr 30 2021 08:04:37 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Apr 30 2021 08:35:57 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f768c7b6ba554d1cbba98bb" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -271,7 +271,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   </div>
   <div class="hero-feat-parent">
     <div data-w-id="4c2438ce-7fc1-5122-c817-591b5e93270c" class="feat-parent">
-      <div class="div-block-1430 editor">
+      <div class="div-block-1430 landing-editor">
         <div class="div-block-1431">
           <div class="div-block-1434">
             <h2 class="heading-19">Write</h2>
