--- a/create.html
+++ b/create.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Apr 30 2021 08:04:37 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Apr 30 2021 12:26:33 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f6dd11de72a337ecd56808c" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -122,7 +122,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </div>
         </div>
       </div>
-      <div class="div-block-1477">
+      <div class="div-block-1477 mainmenu">
         <a href="https://app.storipress.com/dash/auth/sign-in/" class="sign-in">Sign in</a>
         <a href="#Footer-CTA" class="desktop-menubar-button w-inline-block">
           <div class="desktop-menubar-button-text">Join Beta</div>
@@ -285,7 +285,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </div>
       </div>
       <div class="div-block-1386 editor-features"><img src="images/Focus-Picker.png" loading="lazy" width="603" sizes="(max-width: 767px) 100vw, (max-width: 991px) 47vw, 46vw" srcset="images/Focus-Picker-p-500.png 500w, images/Focus-Picker-p-800.png 800w, images/Focus-Picker-p-1080.png 1080w, images/Focus-Picker.png 1206w" alt="Jraft&#x27;s focus picker for selecting an image focal point and automatically cropping for different screens" class="editor-writers-photos _4"><img src="images/Card-Dropdown.png" loading="lazy" width="603" sizes="(max-width: 767px) 100vw, (max-width: 991px) 47vw, 46vw" srcset="images/Card-Dropdown-p-500.png 500w, images/Card-Dropdown-p-800.png 800w, images/Card-Dropdown-p-1080.png 1080w, images/Card-Dropdown.png 1206w" alt="Jraft&#x27;s editor &#x27;card-style&#x27; UI for inserting rich media and images" class="editor-writers-photos _3"><img src="images/2-Styling.png" loading="lazy" width="603" sizes="(max-width: 767px) 100vw, (max-width: 991px) 47vw, 46vw" srcset="images/2-Styling-p-500.png 500w, images/2-Styling-p-800.png 800w, images/2-Styling-p-1080.png 1080w, images/2-Styling.png 1206w" alt="Jraft&#x27;s collaborative editor in action" class="editor-writers-photos _2"><img src="images/1-Collaboration.png" loading="lazy" width="603" sizes="(max-width: 767px) 100vw, (max-width: 991px) 47vw, 46vw" srcset="images/1-Collaboration-p-500.png 500w, images/1-Collaboration-p-800.png 800w, images/1-Collaboration-p-1080.png 1080w, images/1-Collaboration.png 1206w" alt="Jraft&#x27;s collaborative editing in action" class="editor-writers-photos _1">
-        <div class="photo-bg-colour editor-1"></div>
+        <div class="photo-bg-colour editor-2"></div>
       </div>
     </div>
   </div>
@@ -323,7 +323,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </div>
       </div>
       <div class="div-block-1386 editor-features"><img src="images/Editor-Missing-Alt-Text.png" loading="lazy" width="474" sizes="(max-width: 767px) 100vw, 56vw" srcset="images/Editor-Missing-Alt-Text-p-500.png 500w, images/Editor-Missing-Alt-Text-p-800.png 800w, images/Editor-Missing-Alt-Text.png 948w" alt="Jraft&#x27;s editor showing a visual indicator for missing alt text" class="editor-editors-photos _3"><img src="images/Meta-Controls.png" loading="lazy" width="504" sizes="(max-width: 767px) 100vw, (max-width: 991px) 47vw, 46vw" srcset="images/Meta-Controls-p-500.png 500w, images/Meta-Controls-p-800.png 800w, images/Meta-Controls.png 1008w" alt="Jraft&#x27;s article management functionality in the editor" class="editor-editors-photos _2"><img src="images/1-Comments.png" loading="lazy" width="603" sizes="(max-width: 767px) 100vw, (max-width: 991px) 47vw, 46vw" srcset="images/1-Comments-p-500.png 500w, images/1-Comments-p-800.png 800w, images/1-Comments-p-1080.png 1080w, images/1-Comments.png 1206w" alt="Leaving editor comments in the editor for draft articles" class="editor-editors-photos _1">
-        <div class="photo-bg-colour editor-2"></div>
+        <div class="photo-bg-colour editor-3"></div>
       </div>
     </div>
   </div>
