--- a/build.html
+++ b/build.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Apr 30 2021 08:04:37 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Apr 30 2021 12:26:33 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f5f1c74825997427a54233a" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -122,7 +122,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </div>
         </div>
       </div>
-      <div class="div-block-1477">
+      <div class="div-block-1477 mainmenu">
         <a href="https://app.storipress.com/dash/auth/sign-in/" class="sign-in">Sign in</a>
         <a href="#Footer-CTA" class="desktop-menubar-button w-inline-block">
           <div class="desktop-menubar-button-text">Join Beta</div>
@@ -325,7 +325,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="div-block-1413">
           <div class="w-embed"><video src="https://clever-rosalind-0fadb6.netlify.app/videos/infinite_scroll.mp4" width="100%" autoplay="" playsinline="" loop="" muted=""></video></div>
         </div>
-        <div class="photo-bg-colour builder-2"></div>
+        <div class="photo-bg-colour builder-3"></div>
       </div>
     </div>
   </div>
