--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Apr 30 2021 08:40:38 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Apr 30 2021 12:26:33 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f768c7b6ba554d1cbba98bb" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -122,7 +122,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </div>
         </div>
       </div>
-      <div class="div-block-1477">
+      <div class="div-block-1477 mainmenu">
         <a href="https://app.storipress.com/dash/auth/sign-in/" class="sign-in">Sign in</a>
         <a href="#Footer-CTA" class="desktop-menubar-button w-inline-block">
           <div class="desktop-menubar-button-text">Join Beta</div>
@@ -290,7 +290,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             </div>
           </div>
         </div>
-        <div class="div-block-1433"><img src="images/Editor.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 87vw, (max-width: 991px) 48vw, 50vw" srcset="images/Editor-p-500.png 500w, images/Editor-p-800.png 800w, images/Editor-p-1080.png 1080w, images/Editor.png 1280w" alt="Jraft&#x27;s collaborative editor in action">
+        <div class="div-block-1433"><img src="images/Editor.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 48vw, 50vw" srcset="images/Editor-p-500.png 500w, images/Editor-p-800.png 800w, images/Editor-p-1080.png 1080w, images/Editor.png 1280w" alt="Jraft&#x27;s collaborative editor in action">
           <div class="div-block-1436">
             <div class="div-block-1435">
               <h3 class="heading-17">Collaborative Editing</h3>
