--- a/vs/what-wordpress-really-costs-you.html
+++ b/vs/what-wordpress-really-costs-you.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Apr 30 2021 08:04:37 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Apr 30 2021 12:26:33 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f79b0f7dd39a415fb3d2032" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -122,7 +122,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </div>
         </div>
       </div>
-      <div class="div-block-1477">
+      <div class="div-block-1477 mainmenu">
         <a href="https://app.storipress.com/dash/auth/sign-in/" class="sign-in">Sign in</a>
         <a href="#Footer-CTA" class="desktop-menubar-button w-inline-block">
           <div class="desktop-menubar-button-text">Join Beta</div>
@@ -533,7 +533,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <p class="paragraph">On top of that, you’d often discover in the process that some key plugin of yours had gone zombie (that is, wasn’t being maintained anymore), leaving you with the always-enjoyable task of having to find a (hopefully free!) replacement.<br></p>
       <p class="paragraph">Great memories here.<br></p>
       <p class="paragraph">And don’t even get me started on child themes.<br></p>
-      <h3 class="blog-headings h3">The cost of (poor) WordPress performance</h3><img src="../images/WP-Google-Search.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 87vw, 936px" srcset="../images/WP-Google-Search-p-500.png 500w, ../images/WP-Google-Search-p-800.png 800w, ../images/WP-Google-Search-p-1080.png 1080w, ../images/WP-Google-Search.png 1322w" alt="Google suggested searches for term: &#x27;WordPress&#x27;" class="image-57">
+      <h3 class="blog-headings h3">The cost of (poor) WordPress performance</h3><img src="../images/WP-Google-Search.png" loading="lazy" sizes="(max-width: 991px) 100vw, 936px" srcset="../images/WP-Google-Search-p-500.png 500w, ../images/WP-Google-Search-p-800.png 800w, ../images/WP-Google-Search-p-1080.png 1080w, ../images/WP-Google-Search.png 1322w" alt="Google suggested searches for term: &#x27;WordPress&#x27;" class="image-57">
       <p class="paragraph">Yep, that&#x27;s a real screenshot of search suggestions on Google.<br></p>
       <p class="paragraph">In 2009, Google conducted a great experiment where they observed how likely a user was to leave a page, or &#x27;bounce&#x27;, if the site was slow. What they found was that <a href="https://www.marketingdive.com/news/google-53-of-mobile-users-abandon-sites-that-take-over-3-seconds-to-load/426070/" class="blog-link">53% of mobile users don&#x27;t read articles that take more than 3 seconds to load.</a> What&#x27;s more concerning, is the average WordPress publication takes a full 14 seconds to load.<br></p>
       <p class="paragraph">This doesn’t just damage people’s experience <em>on your site</em>. Google today includes page speed as a ranking factor in their algorithm, so if your site&#x27;s slow, you&#x27;re not only providing a bad experience for those who do find you — you’re lessening the chance they’ll find you in the first place.<br></p>
